--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/src/*.iml
+/src/.gradle
+/src/local.properties
+/src/.idea/caches
+/src/.idea/libraries
+/src/.idea/modules.xml
+/src/.idea/workspace.xml
+/src/.idea/navEditor.xml
+/src/.idea/assetWizardSettings.xml
+.DS_Store
+/src/build
+/src/captures
+/src/.externalNativeBuild
+/src/.cxx
+/src/local.properties
